--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:hnty545/myblog-deploy.github.io.git
+  repo: git@github.com:hnty545/myblog-deploy.git
   branch: master
 
 search:
