--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://github.com/hnty545
+url: https://hnty545.github.io/myblog-deploy/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
